package de.hsfl.hansen.motiondetection.detection

open class MotionObject(
  var x: Int,
  var y: Int,
  var score: Float
) {
}